fixed overflowing terminal snippets

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -137,6 +137,8 @@ pre, code {
 .term>div {
 	padding: .25em;
 	border-radius: 5px;
+	overflow: auto;
+	white-space: nowrap;
 }
 
 pre { // without code highlighting
